[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/cubul.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/LeftRightSlider.gd" type="Script" id=2]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://resrouces/World.tres" type="Theme" id=4]
[ext_resource path="res://resrouces/arialbd.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/Reset.gd" type="Script" id=6]
[ext_resource path="res://scripts/ResetSpecific.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=6]
size = 20
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 17
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )
Button/fonts/font = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.572549, 0.631373, 0.678431, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="DynamicFont" id=13]
size = 20
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 100
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Button/fonts/font = SubResource( 13 )

[sub_resource type="ButtonGroup" id=9]

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
params_cull_mode = 1
albedo_color = Color( 0.760784, 0.760784, 0.760784, 1 )

[node name="Spatial" type="Spatial"]

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1160.0
margin_right = -280.0
margin_bottom = -1096.0
script = ExtResource( 2 )
lrPath = NodePath("Control/HSliderLR")
alPath = NodePath("Control2/HSliderAL")
pcPath = NodePath("Control3/HSliderPC")

[node name="Control" type="Control" parent="Control"]
anchor_top = 18.125
anchor_bottom = 18.125
margin_top = -1160.0
margin_bottom = -1160.0

[node name="LRLabel" type="Label" parent="Control/Control"]
margin_left = 16.0
margin_top = 1008.0
margin_right = 207.0
margin_bottom = 1032.0
rect_scale = Vector2( 1.64123, 1.64123 )
theme = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Left / Right Axis (x):"

[node name="SpinBoxLR" type="SpinBox" parent="Control/Control"]
margin_left = 288.0
margin_top = 1008.0
margin_right = 386.0
margin_bottom = 1048.0
mouse_filter = 1
theme = ExtResource( 4 )
min_value = -10.0
max_value = 10.0

[node name="HSliderLR" type="HSlider" parent="Control/Control"]
margin_left = 392.0
margin_top = 1056.0
margin_right = 584.0
margin_bottom = 1096.0
mouse_filter = 1
mouse_default_cursor_shape = 6
min_value = -10.0
max_value = 10.0
step = 0.05

[node name="CanvasLayer" type="CanvasLayer" parent="Control/Control"]

[node name="Control3" type="Control" parent="Control"]
anchor_top = 18.125
anchor_bottom = 18.125
margin_top = -1160.0
margin_right = 88.8
margin_bottom = -1120.0

[node name="ProgConlael" type="Label" parent="Control/Control3"]
margin_left = 16.0
margin_top = 1104.0
margin_right = 201.0
margin_bottom = 1128.0
rect_scale = Vector2( 1.64123, 1.64123 )
theme = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Prog / Con Axis (z):"

[node name="SpinBoxPC" type="SpinBox" parent="Control/Control3"]
margin_left = 288.0
margin_top = 1104.0
margin_right = 386.0
margin_bottom = 1144.0
mouse_filter = 1
theme = ExtResource( 4 )
min_value = -10.0
max_value = 10.0

[node name="HSliderPC" type="HSlider" parent="Control/Control3"]
margin_left = 392.0
margin_top = 1104.0
margin_right = 584.0
margin_bottom = 1144.0
mouse_filter = 1
mouse_default_cursor_shape = 6
min_value = -10.0
max_value = 10.0
step = 0.05

[node name="Control2" type="Control" parent="Control"]
anchor_top = 18.125
anchor_bottom = 18.125
margin_top = -1160.0
margin_right = 88.8
margin_bottom = -1120.0

[node name="label" type="Label" parent="Control/Control2"]
margin_left = 16.0
margin_top = 1056.0
margin_right = 194.0
margin_bottom = 1080.0
rect_scale = Vector2( 1.64123, 1.64123 )
theme = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Auth / Lib Axis (y):"

[node name="HSliderAL" type="HSlider" parent="Control/Control2"]
margin_left = 392.0
margin_top = 1008.0
margin_right = 584.0
margin_bottom = 1048.0
mouse_filter = 1
mouse_default_cursor_shape = 6
min_value = -10.0
max_value = 10.0
step = 0.05

[node name="SpinBoxAL" type="SpinBox" parent="Control/Control2"]
margin_left = 288.0
margin_top = 1056.0
margin_right = 386.0
margin_bottom = 1096.0
mouse_filter = 1
theme = ExtResource( 4 )
min_value = -10.0
max_value = 10.0

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 1.33375
anchor_top = 18.1563
anchor_right = 1.33375
anchor_bottom = 18.1563
margin_left = -467.0
margin_top = -162.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]
anchor_left = 1.028
anchor_top = 0.988
anchor_right = 1.028
anchor_bottom = 0.988
margin_left = -472.076
margin_top = -88.056
margin_right = -24.076
margin_bottom = -8.056

[node name="1" parent="Control/Panel/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 86.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
custom_constants/hseparation = 5
group = SubResource( 9 )
text = "1"
Economic = NodePath("../../../Control/HSliderLR")
Authoritarian = NodePath("../../../Control2/HSliderAL")
Progressive = NodePath("../../../Control3/HSliderPC")
AsociatedPoint = NodePath("../../../../Spatial/Cube/1")
default = true

[node name="2" parent="Control/Panel/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 90.0
margin_right = 176.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
custom_constants/hseparation = 5
group = SubResource( 9 )
text = "2"
Economic = NodePath("../../../Control/HSliderLR")
Authoritarian = NodePath("../../../Control2/HSliderAL")
Progressive = NodePath("../../../Control3/HSliderPC")
AsociatedPoint = NodePath("../../../../Spatial/Cube/2")

[node name="3" parent="Control/Panel/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 180.0
margin_right = 267.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
custom_constants/hseparation = 5
group = SubResource( 9 )
text = "3"
Economic = NodePath("../../../Control/HSliderLR")
Authoritarian = NodePath("../../../Control2/HSliderAL")
Progressive = NodePath("../../../Control3/HSliderPC")
AsociatedPoint = NodePath("../../../../Spatial/Cube/3")

[node name="4" parent="Control/Panel/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 271.0
margin_right = 357.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
custom_constants/hseparation = 5
group = SubResource( 9 )
text = "4"
Economic = NodePath("../../../Control/HSliderLR")
Authoritarian = NodePath("../../../Control2/HSliderAL")
Progressive = NodePath("../../../Control3/HSliderPC")
AsociatedPoint = NodePath("../../../../Spatial/Cube/4")

[node name="5" parent="Control/Panel/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 361.0
margin_right = 448.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
custom_constants/hseparation = 5
group = SubResource( 9 )
text = "5"
Economic = NodePath("../../../Control/HSliderLR")
Authoritarian = NodePath("../../../Control2/HSliderAL")
Progressive = NodePath("../../../Control3/HSliderPC")
AsociatedPoint = NodePath("../../../../Spatial/Cube/5")

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel"]
anchor_left = 1.028
anchor_top = 0.988
anchor_right = 1.028
anchor_bottom = 0.988
margin_left = -472.076
margin_top = -152.056
margin_right = -24.076
margin_bottom = -96.056

[node name="ResetAll" type="Button" parent="Control/Panel/HBoxContainer2"]
margin_right = 222.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
text = "Resetează  Tot"
script = ExtResource( 6 )
buttonContainer = NodePath("../../HBoxContainer")
pointsPath = NodePath("../../../../Spatial/Cube")
Economic = NodePath("../../../Control/HSliderLR")
Authoritarian = NodePath("../../../Control2/HSliderAL")
Progressive = NodePath("../../../Control3/HSliderPC")

[node name="ResetSpecific" type="Button" parent="Control/Panel/HBoxContainer2"]
margin_left = 226.0
margin_right = 448.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Resetează Punct"
script = ExtResource( 7 )
buttonContainer = NodePath("../../HBoxContainer")
Economic = NodePath("../../../Control/HSliderLR")
Authoritarian = NodePath("../../../Control2/HSliderAL")
Progressive = NodePath("../../../Control3/SpinBoxPC")

[node name="Spatial" parent="." instance=ExtResource( 1 )]

[node name="lineY" parent="Spatial/Cube/1" index="0"]
transform = Transform( -0.18, -1.50996e-07, 0, 2.71792e-08, -1, 0, 0, 0, 0.18, 0, 0, 0 )

[node name="lineX" parent="Spatial/Cube/1" index="1"]
transform = Transform( -1, 0, -2.71792e-08, 0, 0.18, 0, 1.50996e-07, 0, -0.18, 0, 0, 0 )

[node name="lineZ" parent="Spatial/Cube/1" index="2"]
transform = Transform( -0.18, 0, -1.50996e-07, 0, 0.18, 0, 2.71792e-08, 0, -1, 0, 0, 0 )

[node name="lineY2" parent="Spatial/Cube/1" index="3"]
material/0 = SubResource( 10 )

[node name="lineY3" parent="Spatial/Cube/1" index="4"]
material/0 = SubResource( 10 )

[node name="lineX2" parent="Spatial/Cube/1" index="5"]
material/0 = SubResource( 10 )

[node name="lineX3" parent="Spatial/Cube/1" index="6"]
material/0 = SubResource( 10 )

[node name="lineZ2" parent="Spatial/Cube/1" index="7"]
material/0 = SubResource( 10 )

[node name="lineZ3" parent="Spatial/Cube/1" index="8"]
material/0 = SubResource( 10 )

[node name="lineY" parent="Spatial/Cube/2" index="0"]
transform = Transform( -0.18, -1.50996e-07, 0, 2.71792e-08, -1, 0, 0, 0, 0.18, 0, 0, 0 )

[node name="lineX" parent="Spatial/Cube/2" index="1"]
transform = Transform( -1, 0, -2.71792e-08, 0, 0.18, 0, 1.50996e-07, 0, -0.18, 0, 0, 0 )

[node name="lineZ" parent="Spatial/Cube/2" index="2"]
transform = Transform( -0.18, 0, -1.50996e-07, 0, 0.18, 0, 2.71792e-08, 0, -1, 0, 0, 0 )

[node name="lineY" parent="Spatial/Cube/3" index="0"]
transform = Transform( -0.18, -1.50996e-07, 0, 2.71792e-08, -1, 0, 0, 0, 0.18, 0, 0, 0 )

[node name="lineX" parent="Spatial/Cube/3" index="1"]
transform = Transform( -1, 0, -2.71792e-08, 0, 0.18, 0, 1.50996e-07, 0, -0.18, 0, 0, 0 )

[node name="lineZ" parent="Spatial/Cube/3" index="2"]
transform = Transform( -0.18, 0, -1.50996e-07, 0, 0.18, 0, 2.71792e-08, 0, -1, 0, 0, 0 )

[node name="lineY" parent="Spatial/Cube/4" index="0"]
transform = Transform( -0.18, -1.50996e-07, 0, 2.71792e-08, -1, 0, 0, 0, 0.18, 0, 0, 0 )

[node name="lineX" parent="Spatial/Cube/4" index="1"]
transform = Transform( -1, 0, -2.71792e-08, 0, 0.18, 0, 1.50996e-07, 0, -0.18, 0, 0, 0 )

[node name="lineZ" parent="Spatial/Cube/4" index="2"]
transform = Transform( -0.18, 0, -1.50996e-07, 0, 0.18, 0, 2.71792e-08, 0, -1, 0, 0, 0 )

[node name="lineY" parent="Spatial/Cube/5" index="0"]
transform = Transform( -0.18, -1.50996e-07, 0, 2.71792e-08, -1, 0, 0, 0, 0.18, 0, 0, 0 )

[node name="lineX" parent="Spatial/Cube/5" index="1"]
transform = Transform( -1, 0, -2.71792e-08, 0, 0.18, 0, 1.50996e-07, 0, -0.18, 0, 0, 0 )

[node name="lineZ" parent="Spatial/Cube/5" index="2"]
transform = Transform( -0.18, 0, -1.50996e-07, 0, 0.18, 0, 2.71792e-08, 0, -1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.964017, 0.265842, 0, -0.265842, 0.964017, 0, 0.948757, 7.67525 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 16.3986, 0, 0, 0, 16.3986, 0, 0, 0, 16.3986, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[editable path="Spatial"]
